load("@rules_go//go:def.bzl", "go_library")
load("@gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "limeanger",
    srcs = [
        "gui.go",
        "limeanger.go",
    ],
    importpath = "github.com/taylormonacelli/limeanger",
    visibility = ["//visibility:public"],
    deps = ["@com_github_pterm_pterm//:pterm"],
)
