module(
    name = "limeanger",
    repo_name = "com_github_taylormonacelli_limeanger",
)

bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "rules_go", version = "0.50.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_pterm_pterm", "com_github_taylormonacelli_goldbug")
